--- a/style.css
+++ b/style.css
@@ -31,20 +31,17 @@ body{
 main{
     display: grid;
     place-content: center;
-    height: 100vh;
 }
 
 .product-detail-card{
     min-width: 290px;
     max-width: 400px;
-    /* height: 500px; */
+    /* height: 800px; */
     display: grid;
     grid-template-rows: 2fr 3fr;
     background-color: var(--just-white);
     border-radius: 15px;
-    margin-left: 15px;
-    margin-right: 15px;
-    
+    margin: 15px;
 }
 
 .product--img{
