--- a/style.css
+++ b/style.css
@@ -68,13 +68,13 @@ main{
     font-size: 3.2rem;
     font-family: var(--font-fraunces);
     font-weight: 700;
-    line-height: 2.6rem;
+    line-height: 3.4rem;
     color: var(--dark-blue);
     margin-bottom: 15px;
 }
 
 .info--text{
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     font-weight: 500;
     line-height: 2.4rem;
     color: var(--grasyish-blue);
@@ -92,6 +92,7 @@ main{
 .info--price sup{
     font-size: 1.6rem;
     margin-left: 20px;
+    font-weight: 500;
     color: var(--grasyish-blue);
 }  
 
@@ -99,6 +100,7 @@ main{
     height: 50px;
     width: 100%;
     font-size: 1.7rem;
+    font-weight: 700;
     background-color: var(--dark-cyan);
     color: var(--just-white);
     border: none;
