--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ main{
     max-width: 400px;
     /* height: 800px; */
     display: grid;
-    grid-template-rows: 2fr 3fr;
+    grid-template-rows: 250px 400px;
     background-color: var(--just-white);
     border-radius: 15px;
     margin: 15px;
@@ -109,4 +109,14 @@ main{
 
 .info--add-button img{
     margin-right: 10px;
+}
+
+@media (min-width: 340px) {
+    .product-detail-card{
+        grid-template-rows: 250px 380px;
+    }
+}
+
+@media (min-width: 375px){
+    
 }
