Añadiendo lazy loading a las img y ajustuando icono

--- a/style.css
+++ b/style.css
@@ -104,6 +104,9 @@ main{
     color: var(--just-white);
     border: none;
     border-radius: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .info--add-button img{
